--- a/ic.bib
+++ b/ic.bib
@@ -85,4 +85,43 @@
   file = {Intelligent content and UX | Intentional Design Inc.:/Users/heinz/Library/Application Support/Zotero/Profiles/nt6laygw.default/zotero/storage/WBDJBZZ6/intelligent-content-and-user-experience.html:text/html}
 }
 
+@book{rockley2015a,
+  address = {Laguna Hills, CA},
+  edition = {1st edition},
+  series = {The content wrangler content strategy series},
+  title = {Intelligent Content: A Primer},
+  isbn = {978-1-937434-46-5 978-1-937434-47-2},
+  shorttitle = {Intelligent Content},
+  language = {eng},
+  timestamp = {2017-10-14T03:44:22Z},
+  publisher = {{XML Press}},
+  author = {Rockley, Ann and Cooper, Charles and Abel, Scott},
+  year = {2015},
+  keywords = {intelligent content}
+}
+
+@misc{gollner2016,
+  title = {Content 4.0 - {{The Content Philosopher}}},
+  timestamp = {2017-10-14T03:53:34Z},
+  urldate = {2017-10-14},
+  url = {http://www.gollner.ca/2016/12/content_4-0.html},
+  journal = {The Content Philosopher},
+  author = {Gollner, Joe},
+  month = dec,
+  year = {2016},
+  keywords = {content 4.0,intelligent content},
+  file = {Content 4.0 - The Content Philosopher:/Users/heinz/Library/Application Support/Zotero/Profiles/nt6laygw.default/zotero/storage/PHFXX6GJ/content_4-0.html:text/html}
+}
+
+@misc{kay,
+  type = {Stylus Studio},
+  title = {Learn {{XQuery}} in 10 {{Minutes}}, by {{Dr}}. {{Michael Kay}} - {{An XQuery Tutorial}}},
+  timestamp = {2017-10-14T05:22:42Z},
+  urldate = {2017-10-14},
+  url = {http://www.stylusstudio.com/xquery-primer-new.html},
+  author = {Kay, Michael},
+  keywords = {intelligent content,XML,XQuery},
+  file = {Learn XQuery in 10 Minutes, by Dr. Michael Kay - An XQuery Tutorial:/Users/heinz/Library/Application Support/Zotero/Profiles/nt6laygw.default/zotero/storage/T8M8HUHS/xquery-primer-new.html:text/html}
+}
+
 
